--- a/Part 5/src/styles/App.css
+++ b/Part 5/src/styles/App.css
@@ -8,6 +8,18 @@ html {
   line-height: 150%;
   border-bottom: 1px solid #969696;
 }
+.blog button {
+  padding: 0.2em 1em;
+  background-color: transparent;
+  color: tomato;
+  border-color: tomato;
+  font-size: 0.7em;
+}
+.blog button:hover {
+  background-color: tomato;
+  border-color: tomato;
+  color: #333;
+}
 form {
   padding: 1em;
 }
@@ -18,23 +30,48 @@ form div {
   border-radius: 0.3rem;
   border: 1px solid #969696;
 }
-form button {
+
+button {
   margin: 0.5em;
+  padding: 0.5em 1.5em;
+  font-weight: bolder;
+  border: none;
+  border-radius: 0.3rem;
+  background-color: lightblue;
+  border: 2px solid lightblue;
+
+  color: #333;
+  transition: color 0.2s, background-color 0.2s;
+  cursor: pointer;
+}
+button:hover {
+  background-color: #333;
+  color: lightblue;
+  border: 2px solid lightblue;
+}
+form button {
   color: #fff;
   border: 1px solid #969696;
   background-color: transparent;
-  padding: 1.1em 4em;
+  padding: 1em 2em;
   text-transform: uppercase;
-  border-radius: 0.3rem;
-  transition: color 0.2s, background-color 0.2s;
-  font-weight: bold;
-  cursor: pointer;
 }
 form button:hover {
   background-color: #fff;
+  border: 1px solid #fff;
   color: #333;
 }
+
 label {
   display: block;
   margin: 0.5em;
+}
+.blog .button--delete {
+  color: #ee0000;
+  border-color: #ee0000;
+}
+.blog .button--delete:hover {
+  color: #333;
+  background-color: #ee0000;
+  border-color: #ee0000;
 }
