--- a/Part 7/ultimate-hooks/src/styles/App.css
+++ b/Part 7/ultimate-hooks/src/styles/App.css
@@ -11,7 +11,6 @@
   font-family: 'Roboto', sans-serif;
 }
 body {
-  margin: 1rem;
   background-color: #333;
   color: #fff;
   font-size: 2rem;
@@ -19,10 +18,6 @@ body {
 
 h2 {
   color: lightsalmon;
-}
-
-div {
-  margin: 3rem 1rem;
 }
 
 a {
@@ -53,4 +48,17 @@ footer {
 .anecdoteList a:hover {
   cursor: pointer;
   color: #187b76;
+}
+form {
+  margin: 1rem 1rem 5rem 1rem;
+  min-height: 10vh;
+  border-bottom: 1px solid lightblue;
+}
+main {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  justify-items: center;
+}
+main > * {
+  width: 45vw;
 }
